[package]
name = "watten"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
num_cpus = "1.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"

[lib]
crate-type = ["rlib", "cdylib"]

[package.metadata.wasm-pack.profile.release]
# -O3 lets wasm-opt do aggressive optimisations. The 120^4 populate is
# the hot path; enabling this typically gives a ~2-3x speed-up.
wasm-opt = ['-O3', '--enable-bulk-memory']

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
